# eacardgen

./: CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml
html/: index.html
src/: card.cc  card.h  task.cc  task.h
